# Scut_Racing-Cpp

./: .gitignore  CMakeLists.txt  README.md
config/: README.md  car_config.txt  ftire_config.txt
include/: kb_tool.h  keyboard_control.h  test_kb_input.h  test_vehicle.h  tire.h  vehicle.h  visual.h
src/: kb_tool.cpp  keyboard_control.cpp  main.cpp  test_kb_input.cpp  test_vehicle.cpp  tire.cpp  vehicle.cpp  visual.cpp
